# AdventOfCode

./: README.md  discovery.py  main.py  pyproject.toml  results.py  solution.py
solutions/: __init__.py
solutions/y2025/: day01.py  day02.py
